Add basic stub that compiles